Name:                descartes
Version:             0.1
Synopsis:            REST interface to vaultaire and chevalier
Description:         REST interface to vaultaire and chevalier
License:             BSD3
Author:              christian@ponies.io
Maintainer:          christian@ponies.io
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable vaultaire-rest
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    cereal,
    type-level,
    async,
    zeromq4-haskell,
    transformers,
    text,
    aeson,
    pipes,
    vector,
    attoparsec,
    pipes-concurrency,
    scientific,
    lz4,
    clock,
    protobuf

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
