Name:                sieste
Version:             0.3.2
Synopsis:            REST interface to vaultaire and chevalier
Description:         REST interface to vaultaire and chevalier
License:             BSD3
Author:              engineering@anchor.net.au
Maintainer:          engineering@anchor.net.au
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable sieste
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    aeson                     >= 0.7,
    cereal,
    marquise,
    async,
    zeromq4-haskell,
    base64-bytestring,
    transformers,
    text,
    pipes,
    vector,
    attoparsec,
    pipes-concurrency,
    scientific,
    packer,
    reinterpret-cast,
    lz4,
    clock,
    protobuf,
    locators,
    chevalier-common          >= 0.5

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
